@@ -136,14 +136,14 @@ fi
 
 AM_CONDITIONAL(ENABLE_GTK_ENGINE, test x$enable_gtk_theme = xyes)
 
-AC_PATH_PROG(QUERYLOADERS, gdk-pixbuf-query-loaders, false)
+AC_PATH_PROG(QUERYLOADERS, gdk-pixbuf-query-loaders, true)
 
 AC_ARG_ENABLE(pixbuf-loader,
     [  --enable-pixbuf-loader  Enable a RSVG based GdkPixbuf loader [default=auto]],
     enable_pixbuf_loader="$enableval", enable_pixbuf_loader=auto)
 
 if test x$enable_pixbuf_loader = xauto ; then
-    if test x$QUERYLOADERS = xfalse ; then 
+    if test x$QUERYLOADERS = xtrue ; then 
         enable_pixbuf_loader=no
     else
         enable_pixbuf_loader=yes
